[gd_scene load_steps=47 format=3 uid="uid://bcl2cdu08j88h"]

[ext_resource type="Script" path="res://Scripts/GameController.gd" id="1_uihb3"]
[ext_resource type="Script" path="res://Scripts/Field.gd" id="2_uiuq2"]
[ext_resource type="Texture2D" uid="uid://e5ib4cgstta6" path="res://Sprites/cat_sheet.png" id="3_kaltp"]
[ext_resource type="Texture2D" uid="uid://cr0mx0est6ts4" path="res://Sprites/porcupine_sheet.png" id="4_2x2f0"]
[ext_resource type="Texture2D" uid="uid://dlk6k7m15v48f" path="res://Sprites/big_paw.png" id="5_niolc"]
[ext_resource type="Texture2D" uid="uid://dyiw75f4vagnc" path="res://Sprites/exit.png" id="5_y71lx"]
[ext_resource type="Texture2D" uid="uid://dikw5dwnmnbk2" path="res://Sprites/question.png" id="6_1cijc"]
[ext_resource type="Texture2D" uid="uid://34o0fqij0rwu" path="res://Sprites/paw.png" id="6_4ophl"]
[ext_resource type="Texture2D" uid="uid://ilnc2q06wwwd" path="res://Sprites/sandclock.png" id="7_dtlhl"]
[ext_resource type="PackedScene" uid="uid://gfyin82mbht3" path="res://Scenes/direction_sign.tscn" id="7_wi8oq"]
[ext_resource type="Texture2D" uid="uid://ctsl1b1ls62mx" path="res://Sprites/reset.png" id="8_u1muo"]
[ext_resource type="Texture2D" uid="uid://dg3a83o8vb2iv" path="res://Sprites/next.png" id="9_txn78"]
[ext_resource type="Texture2D" uid="uid://dfvmtrsbgeky" path="res://Sprites/flag.png" id="10_6lca8"]
[ext_resource type="Texture2D" uid="uid://dhiwskk6mp05p" path="res://Sprites/thorn.png" id="11_a7v3e"]
[ext_resource type="PackedScene" uid="uid://bb7bj22b2v6yr" path="res://Scenes/ad.tscn" id="15_4fety"]

[sub_resource type="Animation" id="Animation_1d7kt"]
resource_name = "cat_brrr"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_d7lti"]
resource_name = "cat_nodding"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i5n2l"]
_data = {
"cat_brrr": SubResource("Animation_1d7kt"),
"cat_nodding": SubResource("Animation_d7lti")
}

[sub_resource type="Animation" id="Animation_ewrkx"]
resource_name = "porcupine_brrr"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_ihus2"]
resource_name = "porcupine_nodding"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xaafc"]
_data = {
"porcupine_brrr": SubResource("Animation_ewrkx"),
"porcupine_nodding": SubResource("Animation_ihus2")
}

[sub_resource type="Animation" id="Animation_1x31x"]
resource_name = "down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -208), Vector2(0, 192)]
}

[sub_resource type="Animation" id="Animation_t4bsi"]
resource_name = "left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(216, 0), Vector2(-200, 0)]
}

[sub_resource type="Animation" id="Animation_xd8a0"]
resource_name = "right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-216, 0), Vector2(200, 0)]
}

[sub_resource type="Animation" id="Animation_h3j3e"]
resource_name = "up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 208), Vector2(0, -192)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lqnv4"]
_data = {
"down": SubResource("Animation_1x31x"),
"left": SubResource("Animation_t4bsi"),
"right": SubResource("Animation_xd8a0"),
"up": SubResource("Animation_h3j3e")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dphu"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hbww"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2u87"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xay18"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tn880"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_turmb"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjevp"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0q8d"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7h2sm"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8wj8"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ioiu3"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_biid6"]
bg_color = Color(0.305882, 0.505882, 0.505882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywy66"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gwml"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jus0x"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_npuni"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_st6p5"]
bg_color = Color(0.305882, 0.505882, 0.505882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xkob"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4wjt"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gpcsi"]
bg_color = Color(0.137255, 0.243137, 0.243137, 1)

[node name="Base" type="CanvasLayer"]
script = ExtResource("1_uihb3")

[node name="BasePanel" type="ColorRect" parent="."]
modulate = Color(0.0627451, 0.12549, 0.12549, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Field" type="Node2D" parent="."]
script = ExtResource("2_uiuq2")

[node name="Cat" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Sprite" type="Sprite2D" parent="Cat"]
texture_filter = 1
position = Vector2(160, 160)
scale = Vector2(4, 4)
texture = ExtResource("3_kaltp")
hframes = 5
vframes = 5
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cat"]
libraries = {
"": SubResource("AnimationLibrary_i5n2l")
}

[node name="Porcupine" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Sprite" type="Sprite2D" parent="Porcupine"]
texture_filter = 1
position = Vector2(-160, -160)
scale = Vector2(4, 4)
texture = ExtResource("4_2x2f0")
hframes = 5
vframes = 5
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Porcupine"]
libraries = {
"": SubResource("AnimationLibrary_xaafc")
}

[node name="BigPaw" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Base" type="Node2D" parent="BigPaw"]
position = Vector2(200, 0)

[node name="Sprite" type="Sprite2D" parent="BigPaw/Base"]
texture_filter = 1
rotation = -1.5708
scale = Vector2(4, 4)
texture = ExtResource("5_niolc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BigPaw/Base"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_lqnv4")
}

[node name="UpperPanel" type="ColorRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 160.0
offset_right = -32.0
offset_bottom = 288.0
grow_horizontal = 0
color = Color(0.137255, 0.243137, 0.243137, 1)

[node name="RulesButton" type="Button" parent="UpperPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -256.0
offset_right = -232.0
offset_bottom = -160.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_6dphu")
theme_override_styles/hover = SubResource("StyleBoxFlat_1hbww")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g2u87")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xay18")
theme_override_styles/focus = SubResource("StyleBoxFlat_tn880")
text = "??? "
alignment = 2

[node name="MenuButton" type="Button" parent="UpperPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -256.0
offset_bottom = -160.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_6dphu")
theme_override_styles/hover = SubResource("StyleBoxFlat_1hbww")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g2u87")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xay18")
theme_override_styles/focus = SubResource("StyleBoxFlat_tn880")
text = "menu "
alignment = 2

[node name="NextAttacksNameLabel" type="Label" parent="UpperPanel" groups=["localizable"]]
layout_mode = 1
offset_left = 64.0
offset_right = 223.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 42
text = "attacks:"

[node name="TimerNameLabel" type="Label" parent="UpperPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -61.0
offset_right = 283.0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
text = "remaining:"

[node name="TimerValueLabel" type="Label" parent="UpperPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -116.0
offset_top = -61.0
offset_right = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
horizontal_alignment = 2

[node name="RulesPic" type="TextureRect" parent="UpperPanel"]
texture_filter = 1
layout_mode = 0
offset_top = -112.0
offset_right = 16.0
offset_bottom = -96.0
scale = Vector2(4, 4)
texture = ExtResource("6_1cijc")

[node name="ExitPic" type="TextureRect" parent="UpperPanel"]
texture_filter = 1
layout_mode = 0
offset_left = 168.0
offset_top = -112.0
offset_right = 184.0
offset_bottom = -96.0
scale = Vector2(4, 4)
texture = ExtResource("5_y71lx")

[node name="AttackPic" type="TextureRect" parent="UpperPanel"]
texture_filter = 1
layout_mode = 1
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(4, 4)
texture = ExtResource("6_4ophl")

[node name="DirectionSignFirst" parent="UpperPanel" instance=ExtResource("7_wi8oq")]
offset_left = 240.0
offset_right = 240.0
scale = Vector2(4, 4)

[node name="DirectionSignSecond" parent="UpperPanel" instance=ExtResource("7_wi8oq")]
offset_left = 304.0
offset_right = 304.0
scale = Vector2(4, 4)

[node name="TImerPic" type="TextureRect" parent="UpperPanel"]
texture_filter = 1
layout_mode = 1
offset_top = 64.0
offset_right = 16.0
offset_bottom = 80.0
scale = Vector2(4, 4)
texture = ExtResource("7_dtlhl")

[node name="DownPanel" type="ColorRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -288.0
offset_right = 400.0
offset_bottom = -160.0
grow_vertical = 0
color = Color(0.137255, 0.243137, 0.243137, 1)

[node name="RoundNameLabel" type="Label" parent="DownPanel" groups=["localizable"]]
layout_mode = 1
offset_left = 64.0
offset_right = 200.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 42
text = "round:"

[node name="RoundValueLabel" type="Label" parent="DownPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.0
offset_right = -16.0
offset_bottom = 61.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 42
horizontal_alignment = 2

[node name="ThornsNameLabel" type="Label" parent="DownPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -61.0
offset_right = 211.0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
text = "thorns:"

[node name="ThornsValueLabel" type="Label" parent="DownPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -116.0
offset_top = -61.0
offset_right = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
horizontal_alignment = 2

[node name="ReplayButton" type="Button" parent="DownPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 32.0
offset_right = 168.0
offset_bottom = 128.0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_turmb")
theme_override_styles/hover = SubResource("StyleBoxFlat_sjevp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y0q8d")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7h2sm")
theme_override_styles/focus = SubResource("StyleBoxFlat_n8wj8")
text = "new "
alignment = 2

[node name="NextButton" type="Button" parent="DownPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = 32.0
offset_bottom = 128.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_turmb")
theme_override_styles/hover = SubResource("StyleBoxFlat_sjevp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y0q8d")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7h2sm")
theme_override_styles/focus = SubResource("StyleBoxFlat_n8wj8")
text = "skip "
alignment = 2

[node name="ResetPic" type="TextureRect" parent="DownPanel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 48.0
offset_right = 16.0
offset_bottom = 64.0
grow_vertical = 0
scale = Vector2(4, 4)
texture = ExtResource("8_u1muo")

[node name="NextPic" type="TextureRect" parent="DownPanel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = 48.0
offset_right = -152.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(4, 4)
texture = ExtResource("9_txn78")

[node name="RoundPic" type="TextureRect" parent="DownPanel"]
texture_filter = 1
layout_mode = 1
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(4, 4)
texture = ExtResource("10_6lca8")

[node name="ThornPic" type="TextureRect" parent="DownPanel"]
texture_filter = 1
layout_mode = 1
offset_top = 64.0
offset_right = 16.0
offset_bottom = 80.0
scale = Vector2(4, 4)
texture = ExtResource("11_a7v3e")

[node name="MenuPanel" type="ColorRect" parent="."]
self_modulate = Color(0, 0, 0, 0.25098)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="MenuPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_ioiu3")
theme_override_styles/hover = SubResource("StyleBoxFlat_biid6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ywy66")
theme_override_styles/disabled = SubResource("StyleBoxFlat_1gwml")
theme_override_styles/focus = SubResource("StyleBoxFlat_jus0x")
text = "play"

[node name="MenuButton" type="Button" parent="MenuPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 32.0
offset_right = 150.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_npuni")
theme_override_styles/hover = SubResource("StyleBoxFlat_st6p5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7xkob")
theme_override_styles/disabled = SubResource("StyleBoxFlat_t4wjt")
theme_override_styles/focus = SubResource("StyleBoxFlat_gpcsi")
text = "menu"

[node name="HowToPlayButton" type="Button" parent="MenuPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 164.0
offset_right = 150.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_npuni")
theme_override_styles/hover = SubResource("StyleBoxFlat_st6p5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7xkob")
theme_override_styles/disabled = SubResource("StyleBoxFlat_t4wjt")
theme_override_styles/focus = SubResource("StyleBoxFlat_gpcsi")
text = "how to play"

[node name="MessageLabel" type="Label" parent="MenuPanel" groups=["localizable"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -348.0
offset_right = 296.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "protect salami with your thorns!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Ad" parent="." instance=ExtResource("15_4fety")]
visible = false

[connection signal="pressed" from="UpperPanel/RulesButton" to="." method="_on_rules_button_pressed"]
[connection signal="pressed" from="UpperPanel/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="DownPanel/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="DownPanel/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="MenuPanel/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuPanel/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="MenuPanel/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
